--- a/app/views/shopping_cart/checkout/_list_of_items.haml
+++ b/app/views/shopping_cart/checkout/_list_of_items.haml
@@ -2,16 +2,16 @@
   - current_order.order_items.each_with_index do |item, i|
     .general-cart-item.divider-lg
       .general-img-wrap-table
-        = link_to book_path(item.book) do
-          = cl_image_tag img_of(item.book), alt: 'design-book', class: 'cart-img-shadow'
-      %p.title= item.book.title
-      %P.in-grey-600.fw-300= item.book.description.split('. ').first + '.'
+        = link_to product_path(item.product) do
+          = cl_image_tag img_of(item.product), alt: 'design-product', class: 'cart-img-shadow'
+      %p.title= item.product.title
+      %P.in-grey-600.fw-300= item.product.description.split('. ').first + '.'
       %table.table
         %tr
           %td
             %span.in-grey-600= t('price')
           %td
-            %span.font-16.in-gold-500= number_to_currency item.book.price
+            %span.font-16.in-gold-500= number_to_currency item.product.price
         %tr
           %td.vertical-middle
             %span.in-grey-600= t('quantity')
@@ -27,7 +27,7 @@
     %thead
       %tr
         %th
-          %span.in-grey-600= t('book')
+          %span.in-grey-600= t('product')
         %th.col-method
         %th
           %span.in-grey-600= t('price')
@@ -40,14 +40,14 @@
         %tr
           %td
             .general-img-wrap-table
-              = link_to book_path(item.book) do
-                = cl_image_tag img_of(item.book), alt: 'design-book', class: 'cart-img-shadow pull-left'
+              = link_to product_path(item.product) do
+                = cl_image_tag img_of(item.product), alt: 'design-product', class: 'cart-img-shadow pull-left'
           %td
-            = link_to book_path(item.book), class: 'text-as-link' do
-              %p.title= item.book.title
-            %p.in-grey-600.fw-300= item.book.description.split('. ').first + '.'
+            = link_to product_path(item.product), class: 'text-as-link' do
+              %p.title= item.product.title
+            %p.in-grey-600.fw-300= item.product.description.split('. ').first + '.'
           %td
-            %span.font-16.in-gold-500= number_to_currency item.book.price
+            %span.font-16.in-gold-500= number_to_currency item.product.price
           %td
             %span.ml-30= item.quantity
           %td
