done without tests

--- a/app/views/shopping_cart/checkout/_delivery-lg.haml
+++ b/app/views/shopping_cart/checkout/_delivery-lg.haml
@@ -15,7 +15,7 @@
         %td
           .form-group.radio.mt-0.mb-0
             = b.label(class: 'radio-label') do
-              = b.radio_button(class: 'radio-input', hidden: "true")
+              = b.radio_button(class: 'radio-input')
               %span.radio-icon
               %span.radio-text= b.text
         %td
