--- a/app/views/shopping_cart/checkout/confirm.html.haml
+++ b/app/views/shopping_cart/checkout/confirm.html.haml
@@ -4,10 +4,10 @@
   .row.mb-20
     .col-sm-3
       %h3.general-subtitle= t('shipping_address')
-      = render 'checkout/addresses_short',  address: @addresses.shipping
+      = render 'shopping_cart/checkout/addresses_short',  address: @addresses.shipping
     .col-sm-3
       %h3.general-subtitle= t('billing_address')
-      = render 'checkout/addresses_short',  address: @addresses.shipping
+      = render 'shopping_cart/checkout/addresses_short',  address: @addresses.shipping
     .col-sm-3
       %h3.general-subtitle= t('shipments')
       %p.general-address
@@ -22,10 +22,10 @@
         %span.general-edit edit
         %br
         = current_order.credit_card.mm_yy
-  = render 'checkout/list_of_items'
+  = render 'shopping_cart/checkout/list_of_items'
   .text-center.general-text-right
     %p.in-gold-500.font-18= t('summary')
     %table.general-summary-table.general-summary-table-right.general-text-right
-      = render 'shared/checkout_summary_numbers', current_order: current_order
+      = render 'shopping_cart/shared/checkout_summary_numbers', current_order: current_order
   .text-center
     = button_to t('place_order'), wizard_path, method: :put, class: 'btn btn-default mb-20'
